Rename and overload method postComponents and updated callers to this method. Use new component request functionality in test class.